--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <section class="hero">
     <h1>Hi, I'm <span>Nandni Nirmal</span></h1>
-    <p style="color: var(--text-dim); font-size: 1.2rem; max-width: 750px; margin: 1rem auto;">Computer Science Engineering Student at <strong>VIT Bhopal University 2nd year</strong>[cite: 10, 11]. Passionate about artificial intelligence and Deep Learning, UI/UX, and crafting real-world AI solutions[cite: 8, 29, 40].</p>
+    <p style="color: var(--text-dim); font-size: 1.2rem; max-width: 750px; margin: 1rem auto;">Computer Science Engineering Student at <strong>VIT Bhopal University 2nd year</strong>. Passionate about artificial intelligence and Deep Learning, UI/UX, and crafting real-world AI solutions.</p>
     
     <div class="social-links">
       <a href="https://github.com/Nandnii-88" class="social-icon" target="_blank">GitHub</a>
@@ -108,21 +108,21 @@
   <div class="grid">
     <div class="card">
       <h3>Brain Tumour Detection</h3>
-      <p>Developed a Deep Learning system using CNN, DNN, and VGG-16 architectures for medical image analysis[cite: 27, 29].</p>
+      <p>Developed a Deep Learning system using CNN, DNN, and VGG-16 architectures for medical image analysis.</p>
       <div style="margin-top: 1rem;">
         <span class="badge">Python</span> <span class="badge">Deep Learning</span> <span class="badge">CNN</span>
       </div>
     </div>
     <div class="card">
       <h3>Library Management System</h3>
-      <p>A C++ console-based system using file handling for inventory and user records[cite: 25, 26].</p>
+      <p>A C++ console-based system using file handling for inventory and user records</p>
       <div style="margin-top: 1rem;">
         <span class="badge">C++</span> <span class="badge">File Handling</span>
       </div>
     </div>
     <div class="card">
       <h3>Online Café Finder</h3>
-      <p>Responsive website enabling users to explore popular cafés and menus online[cite: 30, 31].</p>
+      <p>Responsive website enabling users to explore popular cafés and menus online.</p>
       <div style="margin-top: 1rem;">
         <span class="badge">HTML</span> <span class="badge">CSS</span> <span class="badge">JavaScript</span>
       </div>
@@ -133,13 +133,13 @@
   <div class="grid" style="grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));">
     <div class="card">
       <h4>Global Tech Skills</h4>
-      <p>C, C++, Python, Java, SQL, React, Node.js[cite: 7, 15].</p>
+      <p>C, C++, Python, Java, SQL, React, Node.js.</p>
     </div>
     <div class="card">
       <h4>Certifications</h4>
-      <p>• NPTEL: Cloud Computing & Java [cite: 18]<br>
-         • AWS: Cloud Computing [cite: 20]<br>
-         • HackerRank: SQL (Advanced) [cite: 19]</p>
+      <p>• NPTEL: Cloud Computing & Java<br>
+         • AWS: Cloud Computing <br>
+         • HackerRank: SQL (Advanced) </p>
     </div>
   </div>
 
